--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   toast: ^0.1.5
   shared_preferences: ^0.5.10
   charts_flutter: ^0.12.0
+  splashscreen: ^1.2.0
   
 dev_dependencies:
   flutter_test:
