--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   charts_flutter: ^0.12.0
   splashscreen: ^1.2.0
   flutter_local_notifications: ^4.0.1+2
+  get: ^4.6.5
+  http: ^0.13.6
+  table_calendar: ^3.0.8
+  date_time_format: ^2.0.1
+  font_awesome_flutter: ^10.4.0
   
 dev_dependencies:
   flutter_test:
